# backend

./: .gitignore  Makefile  README.md  README.org  docker-compose.yml  install.sh  last_tag.sh
SDP/backend/: Makefile  README.md  last_tag.py
SDP/backend/database/: README.org  reset.sql
SDP/backend/database/volume/dbx/pgdata/: postmaster.pid
SDP/backend/database/volume/dbx/pgdata/base/16384/: 1247  1249  1259  16385  16391  16392  16394  16396  16403  16405  16407  16414  16423  16424  2224  2579  2604  2606  2608  2610  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2699  2701  2702  2703  2704  (+3 more)
SDP/backend/database/volume/dbx/pgdata/global/: 1262  2671  pg_control  pg_internal.init
SDP/backend/database/volume/dbx/pgdata/pg_stat_tmp/: db_0.stat  db_16384.stat  global.stat
SDP/backend/database/volume/dbx/pgdata/pg_xact/: 0000
SDP/backend/sdp-backend/: Cargo.toml  Dockerfile  sqlx-data.json
SDP/backend/sdp-backend/src/: error.rs  robot.rs  user.rs
SDP/backend/sdp-backend/src/api/: command.rs  user.rs
database/: docker-compose.yml  down.sql  robots.sql  up.sql
sdp-backend/: .dockerignore  Cargo.toml  Dockerfile  sqlx-data.json
sdp-backend/src/: api.rs  auth.rs  command.rs  error.rs  main.rs  poll.rs  robot.rs  test.rs  user.rs
sdp-backend/src/api/: admin.rs  auth.rs  command.rs  poll.rs  user.rs
sdp-backend/src/command/: abort.rs  create.rs  retrieve.rs  time.rs  update.rs
sdp-backend/src/test/: robot_logic.rs
sdp-backend/static/: index.html
